// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Extension parameter takes another extension 1`] = `
"// ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
import { StateMachine, StateMachineProps } from '@matthewbonig/state-machine';
import { Construct } from 'constructs';
import fs from 'fs';
import path from 'path';
export interface TestStateMachineOverrides {
  readonly 'Which database?': Partial<{
    'Type': string;
    'Choices': Partial<[Partial<{
      'Variable': string;
      'StringMatches': string;
      'Next': string;
    }>,Partial<{
      'Variable': string;
      'StringMatches': string;
      'Next': string;
    }>,Partial<{
      'Variable': string;
      'StringMatches': string;
      'Next': string;
    }>]>;
  }>;
  readonly 'Get belle secret': Partial<{
    'Type': string;
    'Next': string;
    'Parameters': Partial<{
      'SecretId': string;
    }>;
    'Resource': string;
    'ResultPath': string;
  }>;
  readonly 'Parse belle secret value': Partial<{
    'Type': string;
    'Parameters': Partial<{
      'ParsedValue.$': string;
    }>;
    'ResultPath': string;
    'Next': string;
  }>;
  readonly 'Create new database username and password': Partial<{
    'Type': string;
    'Resource': string;
    'Parameters': Partial<{
      'Payload.$': string;
      'FunctionName': string;
    }>;
    'Retry': Partial<[Partial<{
      'ErrorEquals': Partial<[string,string,string]>;
      'IntervalSeconds': number;
      'MaxAttempts': number;
      'BackoffRate': number;
    }>]>;
    'ResultPath': string;
    'Comment': string;
    'Next': string;
    'ResultSelector': Partial<{
      'username.$': string;
      'password.$': string;
      'otsUrl.$': string;
    }>;
  }>;
  readonly 'Create user on the database': Partial<{
    'Type': string;
    'Resource': string;
    'Parameters': Partial<{
      'FunctionName': string;
      'Payload': Partial<{
        'script.$': string;
        'databaseName.$': string;
      }>;
    }>;
    'Retry': Partial<[Partial<{
      'ErrorEquals': Partial<[string,string,string]>;
      'IntervalSeconds': number;
      'MaxAttempts': number;
      'BackoffRate': number;
    }>]>;
    'ResultPath': string;
    'Next': string;
  }>;
  readonly 'Send credentials to user': Partial<{
    'Type': string;
    'Parameters': Partial<{
      'Destination': Partial<{
        'ToAddresses.$': string;
      }>;
      'Message': Partial<{
        'Body': Partial<{
          'Text': Partial<{
            'Data.$': string;
          }>;
        }>;
        'Subject': Partial<{
          'Data': string;
        }>;
      }>;
      'Source': string;
    }>;
    'Resource': string;
    'End': Partial<{
    }>;
  }>;
  readonly 'Get engines secret': Partial<{
    'Type': string;
    'Parameters': Partial<{
      'SecretId': string;
    }>;
    'Resource': string;
    'ResultPath': string;
    'Next': string;
  }>;
  readonly 'Parse engines secret value': Partial<{
    'Type': string;
    'Parameters': Partial<{
      'ParsedValue.$': string;
    }>;
    'ResultPath': string;
    'Next': string;
  }>;
  readonly 'Create new database username and password for engines': Partial<{
    'Type': string;
    'Resource': string;
    'Parameters': Partial<{
      'Payload.$': string;
      'FunctionName': string;
    }>;
    'Retry': Partial<[Partial<{
      'ErrorEquals': Partial<[string,string,string]>;
      'IntervalSeconds': number;
      'MaxAttempts': number;
      'BackoffRate': number;
    }>]>;
    'ResultPath': string;
    'Comment': string;
    'ResultSelector': Partial<{
      'username.$': string;
      'password.$': string;
      'otsUrl.$': string;
    }>;
    'Next': string;
  }>;
  readonly 'Create user on jasmine': Partial<{
    'Type': string;
    'Resource': string;
    'Parameters': Partial<{
      'FunctionName': string;
      'Payload': Partial<{
        'script.$': string;
        'databaseName.$': string;
      }>;
    }>;
    'Retry': Partial<[Partial<{
      'ErrorEquals': Partial<[string,string,string]>;
      'IntervalSeconds': number;
      'MaxAttempts': number;
      'BackoffRate': number;
    }>]>;
    'ResultPath': string;
    'Next': string;
  }>;
  readonly 'Send credentials to jasmine user': Partial<{
    'Type': string;
    'Parameters': Partial<{
      'Destination': Partial<{
        'ToAddresses.$': string;
      }>;
      'Message': Partial<{
        'Body': Partial<{
          'Text': Partial<{
            'Data.$': string;
          }>;
        }>;
        'Subject': Partial<{
          'Data': string;
        }>;
      }>;
      'Source': string;
    }>;
    'Resource': string;
    'End': Partial<{
    }>;
  }>;
  readonly 'Get anna secret': Partial<{
    'Type': string;
    'Next': string;
    'Parameters': Partial<{
      'SecretId': string;
    }>;
    'Resource': string;
    'ResultPath': string;
  }>;
  readonly 'Parse anna secret value': Partial<{
    'Type': string;
    'Parameters': Partial<{
      'ParsedValue.$': string;
    }>;
    'ResultPath': string;
    'Next': string;
  }>;
  readonly 'Create new database username and password for anna': Partial<{
    'Type': string;
    'Resource': string;
    'Parameters': Partial<{
      'Payload.$': string;
      'FunctionName': string;
    }>;
    'Retry': Partial<[Partial<{
      'ErrorEquals': Partial<[string,string,string]>;
      'IntervalSeconds': number;
      'MaxAttempts': number;
      'BackoffRate': number;
    }>]>;
    'ResultPath': string;
    'Comment': string;
    'Next': string;
    'ResultSelector': Partial<{
      'username.$': string;
      'password.$': string;
      'otsUrl.$': string;
    }>;
  }>;
  readonly 'Create user on the anna database': Partial<{
    'Type': string;
    'Resource': string;
    'Parameters': Partial<{
      'FunctionName': string;
      'Payload': Partial<{
        'script.$': string;
        'databaseName.$': string;
      }>;
    }>;
    'Retry': Partial<[Partial<{
      'ErrorEquals': Partial<[string,string,string]>;
      'IntervalSeconds': number;
      'MaxAttempts': number;
      'BackoffRate': number;
    }>]>;
    'ResultPath': string;
    'Next': string;
  }>;
  readonly 'Send credentials to user for anna': Partial<{
    'Type': string;
    'Parameters': Partial<{
      'Destination': Partial<{
        'ToAddresses.$': string;
      }>;
      'Message': Partial<{
        'Body': Partial<{
          'Text': Partial<{
            'Data.$': string;
          }>;
        }>;
        'Subject': Partial<{
          'Data': string;
        }>;
      }>;
      'Source': string;
    }>;
    'Resource': string;
    'End': Partial<{
    }>;
  }>;
}
export interface TestStateMachineProps extends Omit<StateMachineProps, 'overrides' | 'definition'> {
  readonly overrides: Partial<TestStateMachineOverrides>;
}
export class TestStateMachine extends StateMachine {
  constructor(scope: Construct, id: string, props: TestStateMachineProps) {
    super(scope, id, {
      ...props,
      definition: JSON.parse(fs.readFileSync(path.join(__dirname, 'test.json.asl')).toString()),
    });
  }
}"
`;

exports[`Json more complex case 1`] = `
"// ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
import { StateMachine, StateMachineProps } from '@matthewbonig/state-machine';
import { Construct } from 'constructs';
import fs from 'fs';
import path from 'path';
export interface TestStateMachineOverrides {
  readonly 'Get Pod To Execute On': Partial<{
    'Type': string;
    'Resource': string;
    'Parameters': Partial<{
      'FunctionName': string;
      'Payload': Partial<{
        'commands': Partial<[string,string,string,string]>;
      }>;
    }>;
    'Retry': Partial<[Partial<{
      'ErrorEquals': Partial<[string,string,string]>;
      'IntervalSeconds': number;
      'MaxAttempts': number;
      'BackoffRate': number;
    }>]>;
    'ResultSelector': Partial<{
      'belle.$': string;
    }>;
    'ResultPath': string;
    'Next': string;
    'Catch': Partial<[Partial<{
      'ErrorEquals': Partial<[string]>;
      'Next': string;
      'ResultPath': string;
    }>]>;
  }>;
  readonly 'Generate Commands': Partial<{
    'Type': string;
    'Resource': string;
    'Parameters': Partial<{
      'Payload.$': string;
      'FunctionName': string;
    }>;
    'Retry': Partial<[Partial<{
      'ErrorEquals': Partial<[string,string,string]>;
      'IntervalSeconds': number;
      'MaxAttempts': number;
      'BackoffRate': number;
    }>]>;
    'ResultSelector': Partial<{
      'commands.$': string;
    }>;
    'ResultPath': string;
    'Next': string;
    'Catch': Partial<[Partial<{
      'ErrorEquals': Partial<[string]>;
      'Next': string;
      'ResultPath': string;
    }>]>;
  }>;
  readonly 'Run Command': Partial<{
    'Type': string;
    'Resource': string;
    'Parameters': Partial<{
      'Payload': Partial<{
        'commands.$': string;
      }>;
      'FunctionName': string;
    }>;
    'Retry': Partial<[Partial<{
      'ErrorEquals': Partial<[string,string,string]>;
      'IntervalSeconds': number;
      'MaxAttempts': number;
      'BackoffRate': number;
    }>]>;
    'ResultPath': string;
    'Next': string;
    'Catch': Partial<[Partial<{
      'ErrorEquals': Partial<[string]>;
      'Next': string;
      'ResultPath': string;
    }>]>;
  }>;
  readonly 'Notify Slack': Partial<{
    'Type': string;
    'Resource': string;
    'Parameters': Partial<{
      'Payload.$': string;
      'FunctionName': string;
    }>;
    'Retry': Partial<[Partial<{
      'ErrorEquals': Partial<[string,string,string]>;
      'IntervalSeconds': number;
      'MaxAttempts': number;
      'BackoffRate': number;
    }>]>;
    'ResultPath': any;
    'End': Partial<{
    }>;
    'Catch': Partial<[Partial<{
      'ErrorEquals': Partial<[string]>;
      'Next': string;
      'ResultPath': string;
    }>]>;
  }>;
  readonly 'Notify Slack of Error': Partial<{
    'Type': string;
    'Resource': string;
    'Parameters': Partial<{
      'Payload.$': string;
      'FunctionName': string;
    }>;
    'Retry': Partial<[Partial<{
      'ErrorEquals': Partial<[string,string,string]>;
      'IntervalSeconds': number;
      'MaxAttempts': number;
      'BackoffRate': number;
    }>]>;
    'End': Partial<{
    }>;
    'ResultPath': any;
  }>;
}
export interface TestStateMachineProps extends Omit<StateMachineProps, 'overrides' | 'definition'> {
  readonly overrides: Partial<TestStateMachineOverrides>;
}
export class TestStateMachine extends StateMachine {
  constructor(scope: Construct, id: string, props: TestStateMachineProps) {
    super(scope, id, {
      ...props,
      definition: JSON.parse(fs.readFileSync(path.join(__dirname, 'test.workflow.json')).toString()),
    });
  }
}"
`;

exports[`Json simple case 1`] = `
"// ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
import { StateMachine, StateMachineProps } from '@matthewbonig/state-machine';
import { Construct } from 'constructs';
import fs from 'fs';
import path from 'path';
export interface TestStateMachineOverrides {
  readonly 'Which database?': Partial<{
    'Type': string;
    'Choices': Partial<[Partial<{
      'Variable': string;
      'StringMatches': string;
      'Next': string;
    }>,Partial<{
      'Variable': string;
      'StringMatches': string;
      'Next': string;
    }>,Partial<{
      'Variable': string;
      'StringMatches': string;
      'Next': string;
    }>]>;
  }>;
  readonly 'Get belle secret': Partial<{
    'Type': string;
    'Next': string;
    'Parameters': Partial<{
      'SecretId': string;
    }>;
    'Resource': string;
    'ResultPath': string;
  }>;
  readonly 'Parse belle secret value': Partial<{
    'Type': string;
    'Parameters': Partial<{
      'ParsedValue.$': string;
    }>;
    'ResultPath': string;
    'Next': string;
  }>;
  readonly 'Create new database username and password': Partial<{
    'Type': string;
    'Resource': string;
    'Parameters': Partial<{
      'Payload.$': string;
      'FunctionName': string;
    }>;
    'Retry': Partial<[Partial<{
      'ErrorEquals': Partial<[string,string,string]>;
      'IntervalSeconds': number;
      'MaxAttempts': number;
      'BackoffRate': number;
    }>]>;
    'ResultPath': string;
    'Comment': string;
    'Next': string;
    'ResultSelector': Partial<{
      'username.$': string;
      'password.$': string;
      'otsUrl.$': string;
    }>;
  }>;
  readonly 'Create user on the database': Partial<{
    'Type': string;
    'Resource': string;
    'Parameters': Partial<{
      'FunctionName': string;
      'Payload': Partial<{
        'script.$': string;
        'databaseName.$': string;
      }>;
    }>;
    'Retry': Partial<[Partial<{
      'ErrorEquals': Partial<[string,string,string]>;
      'IntervalSeconds': number;
      'MaxAttempts': number;
      'BackoffRate': number;
    }>]>;
    'ResultPath': string;
    'Next': string;
  }>;
  readonly 'Send credentials to user': Partial<{
    'Type': string;
    'Parameters': Partial<{
      'Destination': Partial<{
        'ToAddresses.$': string;
      }>;
      'Message': Partial<{
        'Body': Partial<{
          'Text': Partial<{
            'Data.$': string;
          }>;
        }>;
        'Subject': Partial<{
          'Data': string;
        }>;
      }>;
      'Source': string;
    }>;
    'Resource': string;
    'End': Partial<{
    }>;
  }>;
  readonly 'Get engines secret': Partial<{
    'Type': string;
    'Parameters': Partial<{
      'SecretId': string;
    }>;
    'Resource': string;
    'ResultPath': string;
    'Next': string;
  }>;
  readonly 'Parse engines secret value': Partial<{
    'Type': string;
    'Parameters': Partial<{
      'ParsedValue.$': string;
    }>;
    'ResultPath': string;
    'Next': string;
  }>;
  readonly 'Create new database username and password for engines': Partial<{
    'Type': string;
    'Resource': string;
    'Parameters': Partial<{
      'Payload.$': string;
      'FunctionName': string;
    }>;
    'Retry': Partial<[Partial<{
      'ErrorEquals': Partial<[string,string,string]>;
      'IntervalSeconds': number;
      'MaxAttempts': number;
      'BackoffRate': number;
    }>]>;
    'ResultPath': string;
    'Comment': string;
    'ResultSelector': Partial<{
      'username.$': string;
      'password.$': string;
      'otsUrl.$': string;
    }>;
    'Next': string;
  }>;
  readonly 'Create user on jasmine': Partial<{
    'Type': string;
    'Resource': string;
    'Parameters': Partial<{
      'FunctionName': string;
      'Payload': Partial<{
        'script.$': string;
        'databaseName.$': string;
      }>;
    }>;
    'Retry': Partial<[Partial<{
      'ErrorEquals': Partial<[string,string,string]>;
      'IntervalSeconds': number;
      'MaxAttempts': number;
      'BackoffRate': number;
    }>]>;
    'ResultPath': string;
    'Next': string;
  }>;
  readonly 'Send credentials to jasmine user': Partial<{
    'Type': string;
    'Parameters': Partial<{
      'Destination': Partial<{
        'ToAddresses.$': string;
      }>;
      'Message': Partial<{
        'Body': Partial<{
          'Text': Partial<{
            'Data.$': string;
          }>;
        }>;
        'Subject': Partial<{
          'Data': string;
        }>;
      }>;
      'Source': string;
    }>;
    'Resource': string;
    'End': Partial<{
    }>;
  }>;
  readonly 'Get anna secret': Partial<{
    'Type': string;
    'Next': string;
    'Parameters': Partial<{
      'SecretId': string;
    }>;
    'Resource': string;
    'ResultPath': string;
  }>;
  readonly 'Parse anna secret value': Partial<{
    'Type': string;
    'Parameters': Partial<{
      'ParsedValue.$': string;
    }>;
    'ResultPath': string;
    'Next': string;
  }>;
  readonly 'Create new database username and password for anna': Partial<{
    'Type': string;
    'Resource': string;
    'Parameters': Partial<{
      'Payload.$': string;
      'FunctionName': string;
    }>;
    'Retry': Partial<[Partial<{
      'ErrorEquals': Partial<[string,string,string]>;
      'IntervalSeconds': number;
      'MaxAttempts': number;
      'BackoffRate': number;
    }>]>;
    'ResultPath': string;
    'Comment': string;
    'Next': string;
    'ResultSelector': Partial<{
      'username.$': string;
      'password.$': string;
      'otsUrl.$': string;
    }>;
  }>;
  readonly 'Create user on the anna database': Partial<{
    'Type': string;
    'Resource': string;
    'Parameters': Partial<{
      'FunctionName': string;
      'Payload': Partial<{
        'script.$': string;
        'databaseName.$': string;
      }>;
    }>;
    'Retry': Partial<[Partial<{
      'ErrorEquals': Partial<[string,string,string]>;
      'IntervalSeconds': number;
      'MaxAttempts': number;
      'BackoffRate': number;
    }>]>;
    'ResultPath': string;
    'Next': string;
  }>;
  readonly 'Send credentials to user for anna': Partial<{
    'Type': string;
    'Parameters': Partial<{
      'Destination': Partial<{
        'ToAddresses.$': string;
      }>;
      'Message': Partial<{
        'Body': Partial<{
          'Text': Partial<{
            'Data.$': string;
          }>;
        }>;
        'Subject': Partial<{
          'Data': string;
        }>;
      }>;
      'Source': string;
    }>;
    'Resource': string;
    'End': Partial<{
    }>;
  }>;
}
export interface TestStateMachineProps extends Omit<StateMachineProps, 'overrides' | 'definition'> {
  readonly overrides: Partial<TestStateMachineOverrides>;
}
export class TestStateMachine extends StateMachine {
  constructor(scope: Construct, id: string, props: TestStateMachineProps) {
    super(scope, id, {
      ...props,
      definition: JSON.parse(fs.readFileSync(path.join(__dirname, 'test.workflow.json')).toString()),
    });
  }
}"
`;

exports[`yaml handles yaml file 1`] = `
"// ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
import { StateMachine, StateMachineProps } from '@matthewbonig/state-machine';
import { Construct } from 'constructs';
import fs from 'fs';
import path from 'path';
import * as yaml 'js-yaml';
export interface TestStateMachineOverrides {
  readonly 'Check Stock Price': Partial<{
    'Type': string;
    'Resource': string;
    'Next': string;
  }>;
  readonly 'Generate Buy/Sell recommendation': Partial<{
    'Type': string;
    'Resource': string;
    'ResultPath': string;
    'Next': string;
  }>;
  readonly 'Request Human Approval': Partial<{
    'Type': string;
    'Resource': string;
    'Parameters': Partial<{
      'QueueUrl': string;
      'MessageBody': Partial<{
        'Input.$': string;
        'TaskToken.$': string;
      }>;
    }>;
    'ResultPath': any;
    'Next': string;
  }>;
  readonly 'Buy or Sell?': Partial<{
    'Type': string;
    'Choices': Partial<[Partial<{
      'Variable': string;
      'StringEquals': string;
      'Next': string;
    }>,Partial<{
      'Variable': string;
      'StringEquals': string;
      'Next': string;
    }>]>;
  }>;
  readonly 'Buy Stock': Partial<{
    'Type': string;
    'Resource': string;
    'Next': string;
  }>;
  readonly 'Sell Stock': Partial<{
    'Type': string;
    'Resource': string;
    'Next': string;
  }>;
  readonly 'Report Result': Partial<{
    'Type': string;
    'Resource': string;
    'Parameters': Partial<{
      'TopicArn': string;
      'Message': Partial<{
        'Input.$': string;
      }>;
    }>;
    'End': Partial<{
    }>;
  }>;
}
export interface TestStateMachineProps extends Omit<StateMachineProps, 'overrides' | 'definition'> {
  readonly overrides: Partial<TestStateMachineOverrides>;
}
export class TestStateMachine extends StateMachine {
  constructor(scope: Construct, id: string, props: TestStateMachineProps) {
    super(scope, id, {
      ...props,
      definition: yaml.load(fs.readFileSync(path.join(__dirname, 'test.yaml.asl')).toString()),
      aslYaml: true,
    });
  }
}"
`;

exports[`yaml handles yml file 1`] = `
"// ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
import { StateMachine, StateMachineProps } from '@matthewbonig/state-machine';
import { Construct } from 'constructs';
import fs from 'fs';
import path from 'path';
import * as yaml 'js-yaml';
export interface TestStateMachineOverrides {
  readonly 'Check Stock Price': Partial<{
    'Type': string;
    'Resource': string;
    'Next': string;
  }>;
  readonly 'Generate Buy/Sell recommendation': Partial<{
    'Type': string;
    'Resource': string;
    'ResultPath': string;
    'Next': string;
  }>;
  readonly 'Request Human Approval': Partial<{
    'Type': string;
    'Resource': string;
    'Parameters': Partial<{
      'QueueUrl': string;
      'MessageBody': Partial<{
        'Input.$': string;
        'TaskToken.$': string;
      }>;
    }>;
    'ResultPath': any;
    'Next': string;
  }>;
  readonly 'Buy or Sell?': Partial<{
    'Type': string;
    'Choices': Partial<[Partial<{
      'Variable': string;
      'StringEquals': string;
      'Next': string;
    }>,Partial<{
      'Variable': string;
      'StringEquals': string;
      'Next': string;
    }>]>;
  }>;
  readonly 'Buy Stock': Partial<{
    'Type': string;
    'Resource': string;
    'Next': string;
  }>;
  readonly 'Sell Stock': Partial<{
    'Type': string;
    'Resource': string;
    'Next': string;
  }>;
  readonly 'Report Result': Partial<{
    'Type': string;
    'Resource': string;
    'Parameters': Partial<{
      'TopicArn': string;
      'Message': Partial<{
        'Input.$': string;
      }>;
    }>;
    'End': Partial<{
    }>;
  }>;
}
export interface TestStateMachineProps extends Omit<StateMachineProps, 'overrides' | 'definition'> {
  readonly overrides: Partial<TestStateMachineOverrides>;
}
export class TestStateMachine extends StateMachine {
  constructor(scope: Construct, id: string, props: TestStateMachineProps) {
    super(scope, id, {
      ...props,
      definition: yaml.load(fs.readFileSync(path.join(__dirname, 'test.yml.asl')).toString()),
      aslYaml: true,
    });
  }
}"
`;
